[package]
name = "portal-solutions-pupi"
version = "0.0.4"
edition = "2024"
license = "MPL-2.0"
description = "Blazingly fast meta-build tool for our open-source libraries"

[dependencies]
once_cell = "1.21.3"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yml = "0.0.12"
toml = "0.9.5"

[lib]
path = "./src/main.rs"

[[bin]]
name = "pupi"
path = "./src/main.rs"
